Fix form field-label alignment for rtl

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -130,7 +130,10 @@ $label-colors: $form-colors !default
     flex-grow: 1
     flex-shrink: 0
     +ltr-property("margin", 1.5rem)
-    text-align: right
+    +ltr
+      text-align: right
+    +rtl
+      text-align: left
     &.is-small
       font-size: $size-small
       padding-top: 0.375em
